<resources>
    <string name="app_name">MyTello</string>
    <string name="saludo">Bienvenid@</string>
    <string name="ingresar">Entrar</string>
    <string name="desc">Programa tu plan de vuelo</string>
    <string name="nuevo">Crear nuevo Proyecto</string>
    <string name="cargar">Cargar Proyecto</string>
    <string name="todo">TODO</string>


    <string name="ordenes">Selección de ordenes</string>
    <string name="nueva_orden">Nueva orden</string>
    <string name="borrar">Eliminar orden</string>
    <string name="cambiar_orden">Cambiar secuencia</string>
    <string name="lista">Plan de vuelo:</string>
    <string name="form">Añade los datos del plan de vuelo</string>
    <string name="comando">Inserta comando</string>
    <string name="guardar">Insertar</string>

    <string name="up">Ascend to “x” cm. x = 20-500</string>
    <string name="down">down “x” Descend to “x” cm. x = 20-500</string>
    <string name="left">Fly left for “x” cm. “x” = 20-500</string>
    <string name="right">Fly right for “x” cm. “x” = 20-500</string>
    <string name="forward">Fly forward for “x” cm. “x” = 20-500</string>
    <string name="back">Fly backward for “x” cm. “x” = 20-500</string>
    <string name="cw">Rotate “x” degrees clockwise. “x” = 1-360</string>
    <string name="ccw">Rotate “x” degrees counterclockwise. “x” = 1-360</string>
    <string name="flip">Flip in “x” direction. “l” = left “r” = right “f” = forward “b” = back</string>
    <string name="speed">Set speed to “x” cm/s. x = 10-100</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pro_actual">Ordenes para el proyecto actual</string>
    <string name="proyecto">Introduce nombre del proyecto</string>
    <string name="prioridad">prioridad de la orden (1 a infinito)</string>
    <string name="orden">Introduce la orden</string>
    <string name="valor">Intruduce el valor de la orden</string>

</resources>