<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ordenes">



<LinearLayout
    android:id="@+id/lista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_below="@id/cabecera"
    >
    <Button
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"

        />
    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"


        />
    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"


        />
    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"



        />
    <Button
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"


        />
    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/cw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cw"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/ccw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ccw"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/flip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        />


</LinearLayout>


</FrameLayout>