<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/caja"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >
    <LinearLayout
        android:id="@+id/cabecera"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/nombre"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_below="@id/cabecera"
        tools:ignore="UselessParent">

        <ScrollView
            android:id="@+id/lista_ordenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"

            />
        <Button
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"


            />
        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"


            />
        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"



            />
        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"


            />
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/cw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cw"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/ccw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ccw"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/flip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flip"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />
        <Button
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />


    </LinearLayout>
</RelativeLayout>